Style fixes for ArticleViewer
This adds support for up to 12 users, and fixes the broken layout with long article titles.

Resolves #1267

--- a/app/assets/stylesheets/modules/_article_viewer.styl
+++ b/app/assets/stylesheets/modules/_article_viewer.styl
@@ -49,6 +49,18 @@
   background-color #b2dfdb
 .user-highlight-6
   background-color #d7ccc8
+.user-highlight-7
+  background-color #fce4ec
+.user-highlight-8
+  background-color #64ffda
+.user-highlight-9
+  background-color #ffe082
+.user-highlight-10
+  background-color #bbdefb
+.user-highlight-11
+  background-color #e0e0e0
+.user-highlight-12
+  background-color #b0bec5
 
 .article-viewer-title
   font-size 200%
